--- a/templates/home.html
+++ b/templates/home.html
@@ -44,9 +44,9 @@
             </div>
             <!--            </div>-->
             <div class="padding-horizontal">
-                <a href="#/app/search">
-                    <button class="button button-block button-outline button-balanced" ng-click="searchclick();">Search</button>
-                </a>
+<!--                <a href="#/app/search">-->
+                    <button class="button button-block button-outline button-balanced" ng-click="memfunc();">Search</button>
+<!--                </a>-->
             </div>
         </div>
     </ion-content>
