--- a/templates/popsearch.html
+++ b/templates/popsearch.html
@@ -7,11 +7,11 @@
     </ion-header-bar>
     <ion-content>
         <ion-list>
-            <form class="item item-input-inset only-horizontal " ng-submit="doSearch(datasearch); ">
+            <form class="item item-input-inset only-horizontal ">
                 <label class="item-input-wrapper ">
-                    <input type="text " placeholder="Membership No. " ng-model="datasearch " ng-change="doSearch(datasearch);" style="border: 0px;">
+                    <input type="text " placeholder="Membership No. " ng-model="home.membershipno" ng-change="doSearch(datasearch);" style="border: 0px;">
                 </label>
-                <button class="button button-icon ion-search "  type="submit "></button>
+                <button class="button button-icon ion-search " ng-click="" type="submit "></button>
             </form>
 
         </ion-list>
