--- a/templates/popsearch.html
+++ b/templates/popsearch.html
@@ -11,7 +11,7 @@
                 <label class="item-input-wrapper ">
                     <input type="text " placeholder="Membership No. " ng-model="home.membershipno" ng-change="doSearch(datasearch);" style="border: 0px;">
                 </label>
-                <button class="button button-icon ion-search " ng-click="" type="submit "></button>
+                <button class="button button-icon ion-search " ng-click="memfunc(home);" type="submit "></button>
             </form>
 
         </ion-list>
