--- a/templates/profile-edit.html
+++ b/templates/profile-edit.html
@@ -12,31 +12,29 @@
                             <input type="text" placeholder="Name">
                         </div>
                         <div class="item item-input">
-                            <input type="text" placeholder="Area">
+                            <input type="text" placeholder="Area" value="{{sp.shopprofile[0].area}}">
                         </div>
                         <div class="item item-input">
-                            <input type="text" placeholder="Category">
+                            <input type="text" placeholder="Category" value="{{sp.shopprofile[0].category}}">
                         </div>
                         <div class="item item-input">
-                            <textarea placeholder="Address"></textarea>
+                            <textarea placeholder="Address" value="{{sp.shopprofile[0].address}}"></textarea>
                         </div>
                         <div class="item item-input">
-                            <textarea placeholder="Description"></textarea>
+                            <textarea placeholder="Description" value="{{sp.shopprofile[0].description}}"></textarea>
                         </div>
                         <div class="item item-input">
-                            <input type="text" placeholder="Mobile No.">
+                            <input type="text" placeholder="Mobile No." value="{{sp.shopprofile[0].shopcontact1}}">
                         </div>
                         <div class="item item-input">
-                            <input type="text" placeholder="Landline No.">
+                            <input type="text" placeholder="Landline No." value="{{sp.shopprofile[0].shopcontact2}}">
+                        </div>
+                      
+                        <div class="item item-input">
+                            <input type="text" placeholder="Email Id" type=email value="{{sp.shopprofile[0].shopemail}}">
                         </div>
                         <div class="item item-input">
-                            <input type="text" placeholder="Landline No.">
-                        </div>
-                        <div class="item item-input">
-                            <input type="text" placeholder="Email Id" type=email>
-                        </div>
-                        <div class="item item-input">
-                            <input type="text" placeholder="Website" type=email>
+                            <input type="text" placeholder="Website" type=email value="{{sp.shopprofile[0].website}}">
                         </div>
                         <div class="item item-input item-text-wrap header">
                             <h2>Shops Photos</h2>
