--- a/templates/addbalance.html
+++ b/templates/addbalance.html
@@ -11,10 +11,10 @@
                 <div class="list">
                     <label class="item item-input">
                         <span class="input-label">Amount:</span>
-                        <input type="text">
+                        <input type="text" ng-model="amount">
                     </label>
                     <div class="padding-horizontal">
-                        <button class="button button-block button-balanced" type="submit" ng-click="showPopup();">Add Balance</button>
+                        <button class="button button-block button-balanced" type="submit" ng-click="addbalance(amount);">Add Balance</button>
                     </div>
                 </div>
             </form>
