--- a/templates/menu.html
+++ b/templates/menu.html
@@ -26,7 +26,7 @@
                 <ion-item nav-clear menu-close href="#/app/balance">
                     <span>Your Balance</span>
                 </ion-item>
-                <ion-item nav-clear menu-close href="#/app/selling">
+                <ion-item nav-clear menu-close ng-click="sell();">
                     <span>Selling Approvals</span>
                     <span class="badge badge-assertive">1</span>
                 </ion-item>
