--- a/templates/purchase.html
+++ b/templates/purchase.html
@@ -10,14 +10,14 @@
             <form ng-submit="doLogin()">
                 <div class="list">
                     <label class="item item-input">
-                        <span class="input-label">Purchase Limit:</span> Rs.60,000
+                        <span class="input-label">Purchase Limit:</span> {{shop.shopprofile[0].purchasebalance}}
                     </label>
                     <label class="item item-input">
                         <span class="input-label">Amount:</span>
-                        <input type="text" maxlength="10">
+                        <input type="text" maxlength="10" ng-model="amount">
                     </label>
                     <div class="padding-horizontal">
-                        <button class="button button-block button-balanced" type="submit" ng-click="showPopup();">Request</button>
+                        <button class="button button-block button-balanced" type="submit" ng-click="sendamt(amount);">Request</button>
                     </div>
                 </div>
             </form>
