--- a/templates/shop.html
+++ b/templates/shop.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Shop">
     <ion-content>
         <div class="incard card-shop">
-            <ion-list class="lesspadding product-cont">
+            <ion-list class="lesshopadding product-cont">
                 <ion-item class="product">
                     <h2>Apple India</h2>
                     <div class="pull-right balanced amount">
@@ -13,13 +13,13 @@
             <ion-item class="item-left">
                 <h2>Area</h2>
                 <div class="pull-right item-right">
-                    Mulund
+                    {{shop.shopprofile[0].area}}
                 </div>
             </ion-item>
             <ion-item class="item-left">
                 <h2>Category</h2>
                 <div class="pull-right item-right">
-                    Mobile
+                    {{shop.shopprofile[0].category}}
                 </div>
             </ion-item>
             <div class="item item-input item-text-wrap header">
@@ -27,7 +27,7 @@
             </div>
             <div class="item item-input item-text-wrap">
                 <div class="input itemproducts">
-                    Apple Store CST Mumbai-400 001.
+                   {{shop.shopprofile[0].address}}
                 </div>
             </div>
             <div class="item item-input item-text-wrap header">
@@ -35,36 +35,38 @@
             </div>
             <div class="item item-input item-text-wrap">
                 <div class="input itemproducts">
-                    The Apple Store is a chain of retail stores owned and operated by Apple Inc., dealing with computers and consumer electronics.
+                    {{shop.shopprofile[0].description}}
                 </div>
             </div>
             <ion-item class="item-left">
                 <h2>Cell Number</h2>
                 <div class="pull-right item-right">
-                    9892999999
+                    {{shop.shopprofile[0].shopcontact1}}
                 </div>
             </ion-item>
             <ion-item class="item-left">
                 <h2>Landline No.</h2>
                 <div class="pull-right item-right">
-                    022 25454565
+                     {{shop.shopprofile[0].shopcontact2}}
                 </div>
             </ion-item>
+<!--
             <ion-item class="item-left numbers">
                 <div class="pull-right item-right">
                     022 25454565
                 </div>
             </ion-item>
+-->
             <ion-item class="item-left">
                 <h2>Email Id</h2>
                 <div class="pull-right item-right">
-                    sohan@gmail.com
+                    {{shop.shopprofile[0].shopemail}}
                 </div>
             </ion-item>
             <ion-item class="item-left">
                 <h2>Website</h2>
                 <div class="pull-right item-right">
-                    http://www.apple.com/
+                    {{shop.shopprofile[0].website}}
                 </div>
             </ion-item>
             <div class="item item-input item-text-wrap itemimage">
@@ -100,7 +102,7 @@
             </div>
         </div>
     </ion-content>
-    <ion-footer-bar class="footer-shop ion-item balanced" ng-click="openedit();">
+    <ion-footer-bar class="footer-shop ion-item balanced" ng-click="callpurchase(shop);">
         <h4>Purchase</h4>
     </ion-footer-bar>
 </ion-view>
