--- a/templates/menu.html
+++ b/templates/menu.html
@@ -23,7 +23,7 @@
                 <ion-item nav-clear menu-close href="#/app/profile">
                     <span>My Profile</span>
                 </ion-item>
-                <ion-item nav-clear menu-close href="#/app/balance">
+                <ion-item nav-clear menu-close href="#/app/balance" ng-click="yourbalance();">
                     <span>Your Balance</span>
                 </ion-item>
                 <ion-item nav-clear menu-close ng-click="sell();">
