--- a/templates/popsearch.html
+++ b/templates/popsearch.html
@@ -9,12 +9,28 @@
         <ion-list>
             <form class="item item-input-inset only-horizontal ">
                 <label class="item-input-wrapper ">
-                    <input type="text " placeholder="Membership No. " ng-model="home.membershipno" ng-change="doSearch(datasearch);" style="border: 0px;">
+                    <input type="text " placeholder="Membership No. " ng-model="m.membershipno" ng-change="doSearch(datasearch);" style="border: 0px;">
                 </label>
-                <button class="button button-icon ion-search " ng-click="memfunc(home);" type="submit "></button>
+                <button class="button button-icon ion-search " ng-click="mid(m);" type="submit "></button>
             </form>
 
         </ion-list>
-
+ <div class="incard">
+            <ion-list class="lesspadding">
+                <ion-item class="headed">
+                    <div class="row">
+                        <div class="col">Name</div>
+                        <div class="col">Sell Balance</div>
+                    </div>
+                </ion-item>
+                <ion-item  href="" ng-click="memclick(d);" value="{{d.id}}" >
+                    <div class="row" >
+                        <div class="col">{{d.searchresult[0].name}}</div>
+                        <div class="col"><span class="balanced amount">{{d.searchresult[0].sellbalance}}</span>
+                        </div>
+                    </div>
+                </ion-item>
+            </ion-list>
+        </div>
     </ion-content>
 </ion-modal-view>
