--- a/templates/popsearch.html
+++ b/templates/popsearch.html
@@ -23,7 +23,7 @@
                         <div class="col">Sell Balance</div>
                     </div>
                 </ion-item>
-                <ion-item  href="" ng-click="memclick(d);" value="{{d.id}}" >
+                <ion-item  href="" ng-click="memclick(d);" value="{{d.searchresult[0].id}}" >
                     <div class="row" >
                         <div class="col">{{d.searchresult[0].name}}</div>
                         <div class="col"><span class="balanced amount">{{d.searchresult[0].sellbalance}}</span>
