--- a/templates/profile.html
+++ b/templates/profile.html
@@ -73,6 +73,11 @@
                         <div class="img-profile">
                             <img src="img/add.png">
                         </div>
+                    </div>                 
+                        <div class="input-div">
+                        <div class="img-profile">
+                            <img src="img/add.png">
+                        </div>
                     </div>
                     <div class="input-div">
                         <div class="img-profile">
@@ -96,6 +101,11 @@
                         </div>
                     </div>
                     <div class="input-div">
+                        <div class="img-profile">
+                            <img src="img/add.png">
+                        </div>
+                    </div> 
+                       <div class="input-div">
                         <div class="img-profile">
                             <img src="img/add.png">
                         </div>
