--- a/templates/menu.html
+++ b/templates/menu.html
@@ -17,7 +17,7 @@
         </ion-header-bar>
         <ion-content>
             <ion-list>
-                <ion-item nav-clear menu-close href="#/app/home">
+                <ion-item nav-clear menu-close href="#/app/home" ng-click="homecall();">
                     <span>Home</span>
                 </ion-item>
                 <ion-item nav-clear menu-close href="#/app/profile">
