--- a/templates/popsearch.html
+++ b/templates/popsearch.html
@@ -23,10 +23,10 @@
                         <div class="col">Sell Balance</div>
                     </div>
                 </ion-item>
-                <ion-item  href="" ng-click="memclick(d);" value="{{d.searchresult[0].id}}" >
+                <ion-item  href="" ng-click="shopclick(r);" value="{{r.searchresult[0].id}}" >
                     <div class="row" >
-                        <div class="col">{{d.searchresult[0].name}}</div>
-                        <div class="col"><span class="balanced amount">{{d.searchresult[0].sellbalance}}</span>
+                        <div class="col">{{r.searchresult[0].name}}</div>
+                        <div class="col"><span class="balanced amount">{{r.searchresult[0].sellbalance}}</span>
                         </div>
                     </div>
                 </ion-item>
