--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,7 +7,7 @@
             </div>
             <div class="list profile-cont">
                 <ion-item class="item-left">
-                    <h2>Area</h2>
+                    <h2>Area</h2>{{sp.shopprofile[0].area}}
                     <div class="pull-right item-right"  >
                        {{sp.shopprofile[0].area}}
                     </div>
