--- a/templates/resetpswd.html
+++ b/templates/resetpswd.html
@@ -10,13 +10,13 @@
             <form ng-submit="doreset()">
                 <div class="list">
                     <div class="item item-input">
-                        <input type="password" placeholder="Current Password" ng-model="">
+                        <input type="password" placeholder="Current Password" ng-model="password">
                     </div>
                     <div class="item item-input">
-                        <input type="password" placeholder="New Password" ng-model="">
+                        <input type="password" placeholder="New Password" ng-model="newpassword">
                     </div>
                     <div class="item item-input">
-                        <input type="password" placeholder="Confirm Password" ng-model="">
+                        <input type="password" placeholder="Confirm Password" ng-model="confirmpassword">
                     </div>
                     <div class="padding-horizontal btn-rest">
                         <button class="button button-block button-balanced" type="submit">Submit</button>
