--- a/templates/purchase.html
+++ b/templates/purchase.html
@@ -10,7 +10,7 @@
             <form ng-submit="doLogin()">
                 <div class="list">
                     <label class="item item-input">
-                        <span class="input-label">Purchase Limit:</span> {{shop.shopprofile[0].purchasebalance}}
+                        <span class="input-label">Purchase Limit:</span> {{profile.shopprofile[0].purchasebalance}}
                     </label>
                     <label class="item item-input">
                         <span class="input-label">Amount:</span>
